Fixed layout bug in the Create Dataset Template workflow where the selectmany checkbox table was only displaying one option.

--- a/src/main/webapp/resources/css/structure.css
+++ b/src/main/webapp/resources/css/structure.css
@@ -196,9 +196,9 @@ span[id$='editDataSet'] .ui-button-text {white-space: nowrap;}
 #keywords, #subject, #note, #publication {display:block; margin-bottom:.5em;}
 
 div.form-group .glyphicon.glyphicon-asterisk {font-size:.5em; vertical-align:text-top;}
-#datasetForm .form-group {overflow: hidden;}
-#datasetForm .form-col-container .form-col-container {padding-left:0;}
-#datasetForm .form-col-container .form-col-container .ui-selectonemenu {display:block;}
+#datasetForm .form-group, #templateForm .form-group {overflow: hidden;}
+#datasetForm .form-col-container .form-col-container, #templateForm .form-col-container .form-col-container {padding-left:0;}
+#datasetForm .form-col-container .form-col-container .ui-selectonemenu, #templateForm .form-col-container .form-col-container .ui-selectonemenu {display:block;}
 
 .panel .panel-body .form-group {overflow: hidden;}
 
@@ -208,8 +208,8 @@ div.form-group .glyphicon.glyphicon-asterisk {font-size:.5em; vertical-align:tex
 .form-group .ui-selectonemenu .ui-selectonemenu-trigger {border-radius:0; width:24px;}
 .form-group .ui-selectonemenu .ui-selectonemenu-trigger .ui-icon {margin-top:8px;}
 
-#datasetForm .select-scroll-block {height:auto; max-height:120px; overflow-y:scroll; padding: 6px 12px;}
-#datasetForm .select-scroll-block table.ui-selectmanycheckbox label {margin-left:5px; margin-top:0; font-weight:normal;}
+#datasetForm .select-scroll-block, #templateForm .select-scroll-block {height:auto; max-height:120px; overflow-y:scroll; padding: 6px 12px;}
+#datasetForm .select-scroll-block table.ui-selectmanycheckbox label, #templateForm .select-scroll-block table.ui-selectmanycheckbox label {margin-left:5px; margin-top:0; font-weight:normal;}
 
 #contentTabs .ui-tabs .ui-tabs-panel {padding-left:0; padding-right:0;}
 
